--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>java-ee-lesson-one</module>
         <module>java-spring-mvc-lesson-three</module>
+        <module>java-spring-boot-lesson-four</module>
     </modules>
     <packaging>pom</packaging>
 
