--- a/java-spring-boot-lesson-four/pom.xml
+++ b/java-spring-boot-lesson-four/pom.xml
@@ -47,6 +47,11 @@
 <!--		</dependency>-->
 
 		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>4.3.10.Final</version>
+		</dependency>
+		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
